--- a/lec/all.tex
+++ b/lec/all.tex
@@ -29,15 +29,26 @@
 % подключаем файлы содержимого
 \include{cover}
 \include{ch01}
-%\include{ch02}
-%\include{ch03}
-%\include{ch04} 
-%\include{ch05}
-%\include{ch06}
-%\include{ch07}
-%\include{ch08}
-%\include{ch09}
-%\include{ch10}
+\include{ch02}
+\include{ch03}
+\include{ch04} 
+\include{ch05}
+\include{ch06}
+\include{ch07}
+\include{ch08}
+\include{ch09}
+\include{ch10}
+\include{ch11}
+\include{ch12}
+\include{ch13}
+\include{ch14} 
+\include{ch15}
+\include{ch16}
+\include{ch17}
+\include{ch18}
+\include{ch19}
+\include{ch20}
+\include{ch21}
 \appendix
 \makeatletter
 \gdef\thechapter{\@Asbuk\c@chapter}
