--- a/lec/ch04.tex
+++ b/lec/ch04.tex
@@ -1,36 +1,34 @@
-\chapter{Основи мережі Internet}
+\chapter{Представлення графів}
 \nopagebreak[4]
 \section*{Мета роботи}
-Вивчити основи роботи мережі Інтернет. Ознайомитись з роботою протоколу НТТР. Навчитися встановлювати необхідне програмне забезпечення для розробки сценаріїв на РНР.
+
 \nopagebreak[4]
-\section{Структура мережі Internet}
+\section{Вступ}
 \nopagebreak[4]
 
 
-\section{Індивідуальне завдання}
+\section{Ключові терміни}
 \nopagebreak[4]
-\subsection*{Завдання до лабораторної роботи}
+
+
+
+
+\section{Розширені теоретичні відомості}
 \nopagebreak[4]
-\begin{enumerate}
-\item Вивчити теоретичний матеріал
-\item Відповісти на контрольні запитання
-\item Скласти звіт
-\item Захистити роботу
-\end{enumerate}
+
+
+
+
+\section{Приклади обчислень}
+\nopagebreak[4]
+
+
+
 
 \subsection*{Контрольні запитання}
 \nopagebreak[4]
 \begin{enumerate}
-\item Що таке Internet? З яких структурних частин складається Internet?
-\item Що таке IP-адреса?
-\item Що таке доменне ім'я, з чого воно складається?
-\item Який сервіс Internet перетворює IP-адреси в доменні імена і навпаки?
-\item Яка служба займається розподіленням блоків IP-адрес?
-\item Протокол HTTP. Рівень у моделі OSI, призначення.
-\item Значення URI, URL, URN.
-\item Мови web-програмування, які ви знаєте.
-\item Веб-сервери, які ви знаєте.
-\item Мережеві СКБД, які ви знаєте. 
+\item ?
 \end{enumerate}
 
 
