--- a/lec/ch11.tex
+++ b/lec/ch11.tex
@@ -1,4 +1,4 @@
-\chapter{Алгоритми зовнішнього сортування}
+\chapter{Алгоритми розподілу обчислювального процессу}
 \nopagebreak[4]
 \section*{Мета роботи}
 
