--- a/lec/ch14.tex
+++ b/lec/ch14.tex
@@ -1,4 +1,4 @@
-\chapter{Алгоритми зовнішнього сортування}
+\chapter{Реалізація багатозадачного середовища}
 \nopagebreak[4]
 \section*{Мета роботи}
 
