--- a/lec/ch15.tex
+++ b/lec/ch15.tex
@@ -1,4 +1,4 @@
-\chapter{Алгоритми зовнішнього сортування}
+\chapter{Бібліотеки організації розподілених обчислень}
 \nopagebreak[4]
 \section*{Мета роботи}
 
