--- a/lec/ch17.tex
+++ b/lec/ch17.tex
@@ -1,4 +1,4 @@
-\chapter{Алгоритми зовнішнього сортування}
+\chapter{Конструкції OpenMP  для розподілу робіт}
 \nopagebreak[4]
 \section*{Мета роботи}
 
