--- a/lec/ch12.tex
+++ b/lec/ch12.tex
@@ -1,4 +1,4 @@
-\chapter{Алгоритми зовнішнього сортування}
+\chapter{Архітектура розподіленних обчислень}
 \nopagebreak[4]
 \section*{Мета роботи}
 
