--- a/lec/ch07.tex
+++ b/lec/ch07.tex
@@ -1,11 +1,14 @@
 \chapter{Алгоритми сортування}
-\nopagebreak[4]
-\section*{Мета роботи}
+
 
 \nopagebreak[4]
 \section{Вступ}
 \nopagebreak[4]
+\textbf{Алгоритмом сортування} називається алгоритм для впорядкування деякого безлічі елементів. Зазвичай під алгоритмом сортування подразумевают алгоритм упорядкування безлічі елементів за зростанням або спаданням.
 
+У разі наявності елементів з однаковими значеннями, у впорядкованій послідовності вони розташовуються поруч один за одним у будь-якому порядку. Однак іноді буває корисно зберігати первісний порядок елементів з однаковими значеннями.
+
+Алгоритми сортування мають велике практичне застосування. Їх можна зустріти там, де мова йде про обробку та зберіганні великих обсягів інформації. Деякі завдання обробки даних вирішуються простіше, якщо дані заздалегідь впорядкувати.
 
 \section{Ключові терміни}
 \nopagebreak[4]
@@ -15,21 +18,41 @@
 
 \section{Розширені теоретичні відомості}
 \nopagebreak[4]
+В алгоритмах сортування лише частина даних використовується як ключ сортування. Ключем сортування називається атрибут (або декілька атрибутів), за значенням якого визначається порядок елементів. Таким чином, при написанні алгоритмів сортувань масивів слід врахувати, що ключ повністю або частково збігається з даними.
 
-
-
-
-\section{Приклади обчислень}
-\nopagebreak[4]
-
-
-
-
-\subsection*{Контрольні запитання}
-\nopagebreak[4]
+Практично кожен алгоритм сортування можна розбити на 3 частини:
 \begin{enumerate}
-\item ?
+\item порівняння, визначальне впорядкованість пари елементів;
+\item перестановку, змінюють місце пару елементів;
+\item власне сортують алгоритм, який здійснює порівняння і перестановку елементів до тих пір, поки всі елементи множини не будуть впорядковані.
 \end{enumerate}
+
+\subsection{Оцінка алгоритмів сортування}
+
+Жодна інша проблема не породила такої кількості найрізноманітніших рішень, як завдання сортування. Універсального, найкращого алгоритму сортування на даний момент не існує. Проте, маючи приблизні характеристики вхідних даних, можна підібрати метод, який працює оптимальним чином. Для цього необхідно знати параметри, за якими буде проводитися оцінка алгоритмів.
+
+\textbf{Час сортування} - основний параметр, що характеризує швидкодію алгоритму.
+
+\textbf{Пам'ять} - один з параметрів, який характеризується тим, що ряд алгоритмів сортування вимагають виділення додаткової пам'яті під тимчасове зберігання даних. При оцінці використовуваної пам'яті не враховуватиметься місце, яке займає вихідний масив даних і незалежні від вхідної послідовності витрати, наприклад, на зберігання коду програми.
+
+\textbf{Стійкість} - це параметр, який відповідає за те, що сортування не змінює взаємного розташування рівних елементів.
+
+\textbf{Природність поведінки} - параметр, якій вказує на ефективність методу при обробці вже відсортованих, або частково відсортованих даних. Алгоритм поводиться природно, якщо враховує цю характеристику вхідної послідовності і працює краще.
+
+\subsection{Класифікація алгоритмів сортувань}
+
+Все розмаїття і різноманіття алгоритмів сортувань можна класифікувати за різними ознаками, наприклад, по стійкості, по поведінці, по використанню операцій порівняння, за потреби в додатковій пам'яті, по потреби в знаннях про структуру даних, що виходять за рамки операції порівняння, та інші.
+
+Найбільш докладно розглянемо класифікацію алгоритмів сортування за сферою застосування. У даному випадку основні типи впорядкування діляться наступним чином.
+
+\textbf{Внутрішнє сортування} - це алгоритм сортування, який в процесі упорядкування даних використовує тільки оперативну пам'ять (ОЗП) на комп'ютері. Тобто оперативної пам'яті достатньо для завантаження в неї сортованого масиву даних з довільним доступом до будь-якій комірці і власне для виконання алгоритму. Внутрішня сортування застосовується у всіх випадках, за винятком однопрохідного зчитування даних і однопрохідної записи відсортованих даних. Залежно від конкретного алгоритму та його реалізації дані можуть сортуватися в тій же області пам'яті, або використовувати додаткову оперативну пам'ять.
+
+\textbf{Зовнішнє сортування} - це алгоритм сортування, який при проведенні упорядкування даних використовує зовнішню пам'ять, як правило, жорсткі диски. Зовнішня сортування розроблена для обробки великих списків даних, які не поміщаються в оперативну пам'ять. Звернення до різних носіям накладає деякі додаткові обмеження на даний алгоритм: доступ до носія здійснюється послідовним чином, тобто в кожен момент часу можна вважати або записати тільки елемент, наступний за поточним; обсяг даних не дозволяє їм розміститися в ОЗУ.
+
+Внутрішнє сортування є базовою для будь-якого алгоритму зовнішньої сортування - окремі частини масиву даних сортуються в оперативної пам'яті і за допомогою спеціального алгоритму зчіплюються в один масив, упорядкований по ключу.
+
+
+
 
 
 
