--- a/lec/ch08.tex
+++ b/lec/ch08.tex
@@ -1,11 +1,8 @@
 \chapter{Алгоритми внутрішнього сортування}
-\nopagebreak[4]
-\section*{Мета роботи}
 
-\nopagebreak[4]
 \section{Вступ}
 \nopagebreak[4]
-
+\textbf{Внутрішня сортування} - різновид алгоритмів сортування або їх реалізацій, при якій обсягу оперативної пам'яті достатньо для поміщення в неї сортованого масиву даних з довільним доступом до будь-якій комірці і, власне, для виконання алгоритму. У цьому випадку сортування відбувається максимально швидко, оскільки швидкість доступу до оперативної пам'яті значно вище, ніж до периферійних пристроїв (відповідно, час доступу значно менше). Залежно від конкретного алгоритму та його реалізації дані можуть сортуватися в тій же області пам'яті, або використовувати додаткову оперативну пам'ять. Внутрішня сортування є базовою для будь-якого алгоритму зовнішньої сортування - окремі частини масиву даних сортуються в оперативної пам'яті і за допомогою спеціального алгоритму зчіплюються в один масив, упорядкований по ключу.
 
 \section{Ключові терміни}
 \nopagebreak[4]
@@ -16,20 +13,95 @@
 \section{Розширені теоретичні відомості}
 \nopagebreak[4]
 
+\subsection{Сортування Вибором}
 
+Один з найпростіших методів сортування працює таким чином: знаходимо найменший елемент в масиві і обмінюємо його з елементом знаходяться на першому місці, потім повторюємо процес із другої позиції у файлі і знайдений елемент обмінюємо з другим елементом і так далі поки весь масив НЕ БУДЕ відсортований. Цей метод називається сортування вибором оскільки він працює циклічно вибираючи найменший з елементів, що залишилися.
+
+
+\begin{lstlisting}[label=code:vyb,caption=Сортування вибором]
+procedure selection;
+var
+i, j, min, t: integer;
+begin
+    for i: = 1 to N-1 do
+    begin
+        min: = i;
+        for j: = i + 1 to N do
+             if a [j] <a [min] then
+min: = j;
+        t: = a [min];
+a [min]: = a [i];
+a [i]: = t;
+    end;
+end;
+\end{lstlisting}
+
+У міру просування покажчика i зліва направо через файл, елементи зліва від покажчика знаходяться вже у своїй кінцевій позиції (і їх не більше вже не будуть чіпати), тому масив стає повністю відсортованим до того моменту, коли покажчик досягає правого краю.
+
+Цей метод - один з найпростіших, і від працює дуже добре для невеликих файлів. Його "внутрішній цикл" складається з порівняння a [i] <a [min] (плюс код необхідний для збільшення j та перевірки на те, що він не перевищив N), що навряд чи можна ще спростити. Нижче ми обговоримо те, скільки швидше за все раз ці інструкції будуть виконуватися.
+
+Більше того, незважаючи на те, що цей метод очевидно є методом "грубої сили", він має дуже важливе застосування: оскільки кожен елемент пересувається не більше ніж раз, то він дуже хороший для великих записів з маленькими ключами. Це обговорюється нижче.
+Сортування вставкою
+
+
+\subsection{Сортування вставкою}
+ - це метод який майже настільки ж простий, що і сортування вибором, але набагато більш гнучкий. Цей метод часто використовують при сортуванні карт: беремо один елемент і вставляємо його в потрібне місце серед тих, що ми вже обробили (тим самим залишаючи їх відсортованими).
+
+\begin{lstlisting}[label=code:vstav,caption=Сортування вставкою]
+type
+Index = 0..n;
+var
+a: array [1..n] of elem;
+procedure Insert;
+    var i, j: index;
+    x: elem;
+    begin
+    for i: = 1 to n do
+    begin
+        x: = a [i]; a [0]: = x; j: = i-1;
+        while x.key <a [j] .key do
+        begin
+        a [j + 1]: = a [j]; j: = j-1;
+        end;
+        a [j + 1]: = x;
+    end;
+    end;
+\end{lstlisting}
+Також як і в сортуванні вибором, в процесі сортування елементи зліва від покажчика i знаходяться вже в сортованому порядку, але вони не обов'язково знаходяться у своїй останній позиції, оскільки їх ще можуть пересунути направо щоб вставити більш маленькі елементи зустрінуті пізніше .. Однак масив стає повністю Сортувати коли покажчик досягає правого краю.
+Бульбашкова Сортування
+
+\subsection{Бульбашкове сортування} 
+Необхідно проходити через масив, обмінюючи якщо потрібно елементи; коли на якомусь кроці обмінів не буде потрібно - сортування закінчена. Реалізація цього методу дана нижче.
+
+\begin{lstlisting}[label=code:bubble,caption=Бульбашкове сортування]
+procedure bubble;
+var i, j, t: byte;
+begin
+    for i: = 2 to N do
+        for j: = N down to i do
+             if x [i-1]> x [j] then
+                 begin t: = x [j-1]; x [j-1]: = x [j]; x [j]: = t; end;
+end;
+end;
+\end{lstlisting}
+
+Щоб повірити в те, що вона насправді працює, може знадобитися деякий час. Для цього зауважте, що коли під час першого проходу зустрічаємо максимальний елемент, обмінюємо його з кожним елементом праворуч від нього поки він не опиниться у вкрай правої позиції. На другому проході поміщаємо другу максимальний елемент в передостанню позицію і так далі. Бульбашкова сортування працює також як і сортування вибором, хоча вона і робить набагато більше роботи на те, щоб перемістити елемент у його кінцеву позицію.
+Характеристики Найпростіших сортувань
+
+Властивість 1 Сортування вибором використовує близько N2 / 2 порівнянь і N обмінів.
+
+Властивість 2 Сортування вставкою використовує близько N2 / 4 порівнянь і N2 / 8 обмінів у середньому, і в два рази більше в найгіршому випадку.
+
+Властивість 3 Бульбашкова сортування використовує близько N2 / 2 порівнянь і N2 / 2 обмінів у середньому і найгіршому випадках.
+
+Властивість 4 Сортування вставкою линейна для "майже сортованих" файлів.
+
+Властивість 5 Сортування вибором линейна для файлів з великими записами і маленькими ключами.
 
 
 \section{Приклади обчислень}
 \nopagebreak[4]
 
-
-
-
-\subsection*{Контрольні запитання}
-\nopagebreak[4]
-\begin{enumerate}
-\item ?
-\end{enumerate}
 
 
 
