--- a/lec/labstyle2.sty
+++ b/lec/labstyle2.sty
@@ -20,7 +20,7 @@
 
 
 \makeatletter % эта строка НЕОБХОДИМА!
-\renewcommand{\@chapapp}{Лабораторна робота \No} % необязательная строчка.
+\renewcommand{\@chapapp}{Лекція \No} % необязательная строчка.
 % определяет значение \@chapapp (используется ниже)
 \renewcommand{\@makechapterhead}[1]{% Начало макроопределения
 \vspace*{0 pt}% Пустое место вверху страницы
